# gdiconmaker-installer

./: CMakeLists.txt  icon.icns  main.cpp
.github/workflows/: build.yml
